# instght-plan

./: .gitattributes  .gitignore  README.md  anomaly_detector.py  banned_content.py  bootstrap.py  candidate.py  categorization_model.py  config.py  config_passion.py  contracts.py  demo.py  expected_spend_model.py  feature_engineer.py  fixlist.txt  hash_utils.py  insight_generator.py  insight_model.py  instruct.md  known_persons.py  log_utils.py  logger_factory.py  marketplace_subcategory.py  model_benchmark.py  model_state.py  passion_detector.py  passion_insight_generator.py  passion_models.py  passion_pipeline.py  passion_utils.py  pipeline.py  pipeline_result.py  preprocessor.py  pyproject.toml  recurring_detector.py  refactor_pipeline.py  requirements-dev.txt  requirements.txt  schema.py  seed_labeler.py  (+4 more)
microsteps/: 00_phase0_plan_synthesis.md  01_phase1_codebase_audit.md  checkpoint_01_core_schema_and_config.md  checkpoint_02_pipelineresult_keyword_migration.md  checkpoint_03_contracts_and_bootstrap_setup.md  checkpoint_04_pii_masking_migration_hmac.md  checkpoint_05_supporting_modules.md  checkpoint_06_data_models.md  checkpoint_07_engine_utilities.md  checkpoint_08_passion_engine_implementation.md  checkpoint_09_passion_pipeline_orchestration.md  checkpoint_10_integration_hooks_and_crash_dumps.md  checkpoint_11_infrastructure_and_test_configuration.md  checkpoint_12_comprehensive_test_suite.md  final_integration_gate.md
planv14/: passion_plan_part1.md  passion_plan_part2.md  passion_plan_part3.md  passion_plan_part4.md  passion_plan_part5.md  (+3 more)
(+19 files in other folders)
